# rosetta-bone

./: .env.example  .gitignore  NOTICE  README.md  pyproject.toml
config/: default-kids.toml  default.toml  eval_prompts.yaml  stimuli-kids.yaml  stimuli.yaml
docker/runpod-trainer/: Dockerfile  README.md  train.py
docs/: comedic-modes.md  pilot-history.md  runbook.md
docs/models/: storyteller.md
docs/superpowers/plans/: 2026-05-10-dog-pov-storyteller.md  2026-05-15-runpod-training-migration.md
docs/superpowers/specs/: 2026-05-10-dog-pov-storyteller-design.md
src/rosetta_bone/: __init__.py
src/rosetta_bone/common/: chunking.py  config.py  http.py  jsonl.py  logging.py  pdf.py  types.py
src/rosetta_bone/storyteller/: __init__.py  cli.py  eval_suite.py
src/rosetta_bone/storyteller/infer/: generate.py  model.py
src/rosetta_bone/storyteller/sft/: cost.py  (+8 more)
tests/: conftest.py
tests/integration/: test_e2e_tiny.py
tests/unit/: test_chunking.py  test_cli_ingest.py  test_cli_sft.py  test_cli_train.py  test_config.py  test_cost.py  test_embed.py  test_eval.py  test_eval_suite.py  test_generate.py  test_http.py  test_index.py  test_ingest_behavior.py  test_ingest_pipeline.py  test_ingest_science.py  test_ingest_style.py  test_jsonl.py  test_lora.py  test_merge.py  test_pdf.py  test_poll.py  test_prompt_builder.py  test_remote_convert.py  test_remote_keys.py  test_remote_orchestrator.py  test_remote_runpod_client.py  test_remote_storage.py  test_resolve_adapter_dir.py  test_select.py  test_sft_stats.py  test_stimuli.py  test_train_log_analyzer.py  test_types.py
(+18 files in other folders)
