[project]
name = "rosetta-bone"
version = "0.1.0"
description = "Niche dog-domain LLMs (storyteller v1) trained via the three-pillars + synthetic-data-sandwich pattern."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "mike", email = "mike@agileedge.com" }]
license = { text = "MIT" }

dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "pdfplumber>=0.11",
    "datasets>=2.20",
    "huggingface-hub>=0.24",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "tiktoken>=0.7",
    "mlx>=0.18",
    "mlx-lm>=0.20",
    "typer>=0.12",
    "rich>=13",
    "structlog>=24",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
    "reportlab>=4.2",
]

[project.scripts]
rosetta-storyteller = "rosetta_bone.storyteller.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rosetta_bone"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: integration tests requiring network/GPU/API key (deselect with -m 'not slow')",
]
